--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -147,6 +147,7 @@
   border-radius: 12px;
   background: #f9f9f7;
   padding: 10px;
+  border: 1px solid #dbdfd0;
 }
 .customertitle {
   color: #ad343e;
@@ -198,4 +199,279 @@
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
+}
+
+/* tablet */
+@media only screen and (min-width: 700px) and (max-width: 1024px) {
+  .AboutBg {
+    background: url(../../Img/aboutbg.png);
+    width: 100%;
+    height: 100vh;
+    padding-bottom: 40px;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+  }
+  .About_content {
+    width: 80%;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .About_content h2 {
+    color: #fff;
+    text-align: center;
+    font-family: "Playfair Display";
+    font-size: 55px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 60.5px;
+    margin-top: 20px;
+  }
+  .map {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 60px;
+    padding: 80px 0;
+  }
+  .map-item {
+    display: flex;
+    gap: 20px;
+  }
+  .data_data h4 {
+    color: #2c2f24;
+    margin-bottom: 16px;
+    font-family: "DM Sans";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 26px;
+  }
+  .data_data p {
+    color: #414536;
+    font-family: "DM Sans";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+  }
+  .little {
+    display: flex;
+    gap: 30px;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 80px;
+  }
+  .little img {
+    width: 70%;
+  }
+  .little_content {
+    width: 100%;
+  }
+  .little_content h1 {
+    color: #2c2f24;
+    font-family: "Playfair Display";
+    font-size: 55px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 60.5px;
+    margin-bottom: 20px;
+  }
+  .little_content p {
+    color: #414536;
+    font-family: "DM Sans";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+  }
+  .little_item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    border: 1px solid #dbdfd0;
+    background: #fff;
+    flex-direction: column;
+    text-align: center;
+    padding: 20px 0;
+  }
+  .little_content p {
+    color: #414536;
+    font-family: "DM Sans";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    margin-bottom: 30px;
+  }
+  .Cusmap {
+    display: grid;
+    grid-template-columns: 45% 50%;
+    gap: 60px;
+  }
+  .customer h1 {
+    color: #2c2f24;
+    text-align: center;
+    font-family: "Playfair Display";
+    font-size: 55px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 60.5px;
+    margin-bottom: 40px;
+  }
+  .customerdis {
+    color: #414536;
+    font-family: "DM Sans";
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px;
+    margin-bottom: 20px;
+  }
+  .line {
+    width: 100%;
+    height: 1px;
+    margin-bottom: 20px;
+    opacity: 0.7;
+    background: #dbdfd0;
+  }
+}
+/* phone */
+@media only screen and (max-width: 700px) {
+  .AboutBg {
+    background: url(../../Img/aboutbg.png);
+    width: 100%;
+    height: 100vh;
+    padding-bottom: 40px;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+  }
+  .About_content {
+    width: 90%;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .About_content h2 {
+    color: #fff;
+    text-align: center;
+    font-family: "Playfair Display";
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 60.5px;
+    margin-top: 20px;
+  }
+  .map {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 55px;
+    padding: 80px 0;
+  }
+  .map-item {
+    display: flex;
+    gap: 18px;
+  }
+  .data_data h4 {
+    color: #2c2f24;
+    margin-bottom: 16px;
+    font-family: "DM Sans";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 26px;
+  }
+  .data_data p {
+    color: #414536;
+    font-family: "DM Sans";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+  }
+  .little {
+    display: flex;
+    gap: 30px;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 80px;
+  }
+  .little img {
+    width: 100%;
+  }
+  .little_content {
+    width: 100%;
+  }
+  .little_content h1 {
+    color: #2c2f24;
+    font-family: "Playfair Display";
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 60.5px;
+    margin-bottom: 20px;
+  }
+  .little_content p {
+    color: #414536;
+    font-family: "DM Sans";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    /* margin-bottom: 60px; */
+  }
+  .little_item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    border: 1px solid #dbdfd0;
+    background: #fff;
+    flex-direction: column;
+    text-align: center;
+    padding: 20px 0;
+  }
+  .Cusmap {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 40px;
+  }
+  .customer h1 {
+    color: #2c2f24;
+    text-align: center;
+    font-family: "Playfair Display";
+    font-size: 55px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 60.5px;
+    margin-bottom: 40px;
+  }
+  .customerdis {
+    color: #414536;
+    font-family: "DM Sans";
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px;
+    margin-bottom: 16px;
+  }
+  .line {
+    width: 100%;
+    height: 1px;
+    margin-bottom: 16px;
+    opacity: 0.7;
+    background: #dbdfd0;
+  }
 }
