--- a/src/Components/NavBar/Nabnar.css
+++ b/src/Components/NavBar/Nabnar.css
@@ -46,9 +46,20 @@ nav button:hover {
 }
 
 .logohome {
-  width: 25%;
+  /* width: 25%; */
+  display: flex;
+  gap: 5px;
+  align-items: center;
 }
-
+.logohome p {
+  color: #474747;
+  font-family: "Playfair Display";
+  font-size: 42.667px;
+  font-style: italic;
+  font-weight: 600;
+  line-height: 29.333px;
+  letter-spacing: -0.4px;
+}
 .nav-links.open {
   display: block;
 }
@@ -71,7 +82,19 @@ nav button:hover {
     margin-top: 15px;
   }
   .logohome {
-    width: 25%;
+    /* width: 33%; */
+    display: flex;
+    gap: 3px;
+    align-items: center;
+  }
+  .logohome p {
+    color: #474747;
+    font-family: "Playfair Display";
+    font-size: 26px;
+    font-style: italic;
+    font-weight: 600;
+    line-height: 29.333px;
+    letter-spacing: -0.4px;
   }
   nav button {
     padding: 8px 16px;
@@ -111,7 +134,20 @@ nav button:hover {
   }
 
   .logohome {
-    width: 25%;
+    /* width: 30%; */
+    display: flex;
+    gap: 3px;
+    align-items: center;
+  }
+
+  .logohome p {
+    color: #474747;
+    font-family: "Playfair Display";
+    font-size: 24px;
+    font-style: italic;
+    font-weight: 600;
+    line-height: 29.333px;
+    letter-spacing: -0.4px;
   }
 
   .menu-icon {
