--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -57,6 +57,39 @@
 }
 /* section */
 
+/* modle */
+.modle {
+  width: 100%;
+  height: 100vh;
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  position: relative;
+}
+.popup {
+  width: 90%;
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  transition: all 0.3s;
+}
+.close {
+  background-color: #ad343e;
+  border: 0;
+  padding: 15px 20px;
+  color: white;
+  border-radius: 90px;
+  font-size: 18px;
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  cursor: pointer;
+}
 .little {
   display: flex;
   justify-content: space-between;
