--- a/src/Components/contact/Contact.css
+++ b/src/Components/contact/Contact.css
@@ -60,7 +60,7 @@
   border-radius: 72px;
   border: 1px solid #dbdfd0;
   background: #fff;
-  padding: 14px 0;
+  padding: 14px 10px;
 }
 .form2 textarea {
   border-radius: 16px;
