--- a/src/Components/Blog/Blog.css
+++ b/src/Components/Blog/Blog.css
@@ -7,7 +7,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  margin-bottom: 70px;
+  margin-bottom: 40px;
 }
 .blog_content h1 {
   color: #2c2f24;
@@ -26,4 +26,117 @@
   font-style: normal;
   font-weight: 400;
   line-height: 28px;
+}
+
+.bloggrid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 50px 10px;
+  padding: 40px 0 100px 0;
+}
+.itemgrid {
+  background-color: rgb(255, 255, 255);
+  border-radius: 16px;
+  padding: 0 0 10px 0;
+  text-align: center;
+  border: 1.5px solid #dbdfd0;
+}
+.itemgrid img {
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+}
+.card_menu {
+  margin-bottom: 80px;
+}
+.card-body {
+  text-align: center;
+  padding: 20px 0;
+}
+.card-date-blog {
+  color: #414536;
+  text-align: center;
+  font-family: "DM Sans";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 24px;
+  padding: 0 10px;
+}
+.card-text-blog {
+  color: #2c2f24;
+  text-align: center;
+  font-family: "DM Sans";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  padding: 0px 5px;
+  line-height: 26px;
+}
+@media only screen and (min-width: 700px) and (max-width: 1024px) {
+  .blog_content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .blog_content h1 {
+    color: #2c2f24;
+    text-align: center;
+    font-family: "Playfair Display";
+    font-size: 70px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 96px;
+    margin-bottom: 30px;
+  }
+  .blog_content p {
+    width: 90%;
+    color: #2c2f24;
+    text-align: center;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    /* line-height: 32px; */
+    text-transform: capitalize;
+    /* margin-bottom: 30px; */
+  }
+  .bloggrid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 40px 10px;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .blog_content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .blog_content h1 {
+    color: #2c2f24;
+    text-align: center;
+    font-family: "Playfair Display";
+    font-size: 70px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 96px;
+    margin-bottom: 30px;
+  }
+  .blog_content p {
+    width: 90%;
+    color: #2c2f24;
+    text-align: center;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    /* line-height: 32px; */
+    text-transform: capitalize;
+    /* margin-bottom: 30px; */
+  }
+  .bloggrid {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 40px 10px;
+  }
 }
