--- a/src/Components/NavBar/Nabnar.css
+++ b/src/Components/NavBar/Nabnar.css
@@ -10,6 +10,7 @@ nav ul {
   gap: 0 40px;
   margin-top: 15px;
 }
+
 nav ul li a {
   text-decoration: none;
   color: black;
@@ -38,9 +39,10 @@ nav button {
   cursor: pointer;
   transition: 0.3s all;
 }
+
 nav button:hover {
   background-color: #ad343e;
-  border: 0;
+  border: 1.5px solid #ad343e;
   color: white;
   transform: scale(1.1);
 }
@@ -50,6 +52,7 @@ nav button:hover {
   display: flex;
   gap: 5px;
   align-items: center;
+  cursor: pointer;
 }
 .logohome p {
   color: #474747;
@@ -63,12 +66,12 @@ nav button:hover {
 .nav-links.open {
   display: block;
 }
-.active-link {
+/* .active-link {
   padding: 4px 16px;
   border-radius: 34px;
   background-color: #dbdfd0;
   transition: all 0.3s;
-}
+} */
 @media only screen and (min-width: 700px) and (max-width: 1024px) {
   nav {
     padding: 15px 0;
